--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
       }
 
       .viewport-stable-border {
-          position: relative;
+          position: absolute;
           height: 100%;
           width: 100%;
-          max-width: 500px;
-          margin: 0 auto;
+          left: 0;
+          right: 0;
+          top: 0;
+          bottom: 0;
           background-color: #fff;
           border-radius: 20px;
           box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -42,6 +44,8 @@
       }
 
       .content {
+          margin: auto;
+          max-width: 500px;
           padding: 20px;
       }
 
@@ -73,17 +77,17 @@
     <input type="text" placeholder="Input 6">
     <input type="text" placeholder="Input 7">
     <input type="text" placeholder="Input 8">
-    <input type="text" placeholder="Input 9">
+    <input type="text" placeholder="Input 92">
     <input type="text" placeholder="Input 10">
     <input type="text" placeholder="Input 11">
     <input type="text" placeholder="Input 12">
-    <input type="text" placeholder="Input 13">
+    <input type="text" placeholder="Input 123">
     <input type="text" placeholder="Input 24">
     <input type="text" placeholder="Input 15">
     <input type="text" placeholder="Input 26">
-    <input type="text" placeholder="Input 17">
+    <input type="text" placeholder="Input 127">
     <input type="text" placeholder="Input 28">
-    <input type="text" placeholder="Input 19">
+    <input type="text" placeholder="Input 129">
     <input type="text" placeholder="Input 20">
   </div>
 </div>
