--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no">
   <title>Telegram Web App Example</title>
   <style>
@@ -86,9 +87,9 @@
     <input type="text" placeholder="Input 15">
     <input type="text" placeholder="Input 26">
     <input type="text" placeholder="Input 17">
-    <input type="text" placeholder="Input 228">
+    <input type="text" placeholder="Input 28">
     <input type="text" placeholder="Input 19">
-    <input type="text" placeholder="Input 202">
+    <input type="text" placeholder="Input 22">
   </div>
 </div>
 
