--- a/index.html
+++ b/index.html
@@ -63,6 +63,33 @@
       input:last-child {
           margin-bottom: 0;
       }
+
+      /* Стиль кнопки в стиле iOS */
+      .ios-button {
+          display: inline-block;
+          width: 100%;
+          padding: 15px;
+          font-size: 18px;
+          font-weight: bold;
+          text-align: center;
+          color: #fff;
+          background: linear-gradient(145deg, #4facfe, #00f2fe);
+          border: none;
+          border-radius: 15px;
+          box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2), -4px -4px 8px rgba(255, 255, 255, 0.8);
+          cursor: pointer;
+          transition: all 0.3s ease;
+          margin-bottom: 16px;
+      }
+
+      .ios-button:hover {
+          transform: scale(1.05);
+      }
+
+      .ios-button:active {
+          transform: scale(0.95);
+          box-shadow: inset 4px 4px 8px rgba(0, 0, 0, 0.2), inset -4px -4px 8px rgba(255, 255, 255, 0.8);
+      }
   </style>
 </head>
 <body>
@@ -90,6 +117,8 @@
     <input type="text" placeholder="Input 228">
     <input type="text" placeholder="Input 129">
     <input type="text" placeholder="Input 222">
+    <button class="ios-button" onclick="tg.close()">close</button>
+    <button class="ios-button" onclick="tg.expand()">expand</button>
   </div>
 </div>
 
