--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@
     <input class="crm-system__input" type="text" placeholder="Input 15">
     <input class="crm-system__input" type="text" placeholder="Input 26">
     <input class="crm-system__input" type="text" placeholder="Input 17">
-    <input class="crm-system__input" type="text" placeholder="Input 28">
-    <input class="crm-system__input" type="text" placeholder="Input 19">
-    <input class="crm-system__input" type="text" placeholder="Input 22">
+    <input class="crm-system__input" type="text" placeholder="Input 228">
+    <input class="crm-system__input" type="text" placeholder="Input 129">
+    <input class="crm-system__input" type="text" placeholder="Input 222">
     <button class="ios-button" onclick="tg.close()">close</button>
     <button class="ios-button" onclick="tg.expand()">expand</button>
   </div>
 </div>
 
-<script src="https://telegram.org/js/telegram-web-app.js"></script>
+<script src="https://telegram.org/js/telegram-web-app.js?56"></script>
 <script>
   const tg = window.Telegram.WebApp;
 
