--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
   // Инициализация приложения
   if (!!tg) {
     tg.ready();
-    tg.setVerticalSwipeEnabled(false);
+    // tg.setVerticalSwipeEnabled(false);
 
     const inputFields = document.querySelectorAll('.crm-system__input');
-    tg.showAlert(inputFields.length);
+    tg.showAlert(inputFields.length.toLocaleString());
     inputFields.forEach(input => {
       input.addEventListener('focus', () => {
-        tg.showKeyboard({ one_time: false, type: 'text' }); // Текстовая клавиатура
+        tg.showKeyboard({ one_time: false, type: 'number' }); // Текстовая клавиатура
         tg.close();
         tg.showAlert('focus');
       });
@@ -148,6 +148,7 @@
     //   Telegram.expand();
     // });
   } else {
+    alert('Telegram Web App API is not available');
     console.warn('Telegram Web App API is not available.');
   }
 </script>
