--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
     tg.showAlert(inputFields.length.toLocaleString());
     inputFields.forEach(input => {
       input.addEventListener('focus', () => {
-        tg.showAlert('focus');
-        tg.showKeyboard({ one_time: false, type: 'number' }); // Текстовая клавиатура
+        tg.showAlert('focus2');
         tg.close();
       });
 
