--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
     tg.showAlert(inputFields.length.toLocaleString());
     inputFields.forEach(input => {
       input.addEventListener('focus', () => {
-        tg.showAlert('focus2');
-        tg.close();
+        tg.showAlert('focus22');
+        tg.expand();
       });
 
       input.addEventListener('blur', () => {
