--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   // Инициализация приложения
   if (!!tg) {
     tg.ready();
-    tg.requestFullscreen();
+    // tg.requestFullscreen();
 
     const inputFields = document.querySelectorAll('.crm-system__input');
     tg.showAlert(inputFields.length.toLocaleString());
