--- a/index.html
+++ b/index.html
@@ -138,10 +138,16 @@
     tg.showAlert(inputFields.length.toLocaleString());
     inputFields.forEach(input => {
       input.addEventListener('focus', () => {
-
-        // tg.layoutChanged();
-        tg.expand();
-        tg.showAlert('focus22');
+        const documentHeight = Math.max(
+          document.body.scrollHeight,
+          document.documentElement.scrollHeight,
+          document.body.offsetHeight,
+          document.documentElement.offsetHeight,
+          document.body.clientHeight,
+          document.documentElement.clientHeight
+        );
+        tg.setHeight(documentHeight); // Устанавливаем высоту
+        tg.showAlert('focusPokus');
       });
     });
     // Обработка изменения viewport
