--- a/index.html
+++ b/index.html
@@ -20,24 +20,26 @@
           background-color: #f5f5f5;
           color: #333;
           line-height: 1.6;
-          position: fixed;
+          /*position: fixed;*/
           left: 0;
           right: 0;
           top: 0;
           bottom: 0;
-          height: var(--tg-viewport-stable-height, 100vh);
-          transition: height .2s ease;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          overflow: hidden;
-          width: auto;
+          height: 100vh;
+          /*height: var(--tg-viewport-stable-height, 100vh);*/
+          /*transition: height .2s ease;*/
+          /*display: flex;*/
+          /*justify-content: center;*/
+          /*align-items: center;*/
+          /*overflow: hidden;*/
+          width: 100%;
       }
 
       .viewport-stable-border {
           position: relative;
           height: 100%;
           width: 100%;
+          /*height: var(--tg-viewport-stable-height, 100vh);*/
           left: var(--tg-content-safe-area-inset-left, 0);
           right: var(--tg-content-safe-area-inset-right, 0);
           top: var(--tg-content-safe-area-inset-top, 0);
@@ -48,11 +50,18 @@
           border-radius: 20px;
           box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
           overflow: auto;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+
           /*padding-bottom: env(safe-area-inset-bottom);*/
       }
 
       .content {
           padding: 20px;
+          width: 100%;
+          height: 100%;
       }
 
       input {
@@ -102,7 +111,7 @@
 <div class="viewport-stable-border">
   <div class="content">
     <!-- 20 инпутов -->
-    <input class="crm-system__input" type="text" placeholder="Input 1">
+    <input class="crm-system__input" type="text" placeholder="Input 12">
     <input class="crm-system__input" type="text" placeholder="Input 2">
     <input class="crm-system__input" type="text" placeholder="Input 3">
     <input class="crm-system__input" type="text" placeholder="Input 4">
