--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
       .viewport-stable-border {
           position: relative;
-          height: 100%;
+          /*height: 100%;*/
           width: 100%;
-          /*height: var(--tg-viewport-stable-height, 100vh);*/
+          height: var(--tg-viewport-stable-height, 100vh);
           left: var(--tg-content-safe-area-inset-left, 0);
           right: var(--tg-content-safe-area-inset-right, 0);
           top: var(--tg-content-safe-area-inset-top, 0);
@@ -111,7 +111,7 @@
 <div class="viewport-stable-border">
   <div class="content">
     <!-- 20 инпутов -->
-    <input class="crm-system__input" type="text" placeholder="Input 12">
+    <input class="crm-system__input" type="text" placeholder="Input 1">
     <input class="crm-system__input" type="text" placeholder="Input 2">
     <input class="crm-system__input" type="text" placeholder="Input 3">
     <input class="crm-system__input" type="text" placeholder="Input 4">
