--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!--  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">-->
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <meta name="format-detection" content="telephone=no">
   <title>Telegram Web App Example</title>
   <style>
@@ -25,21 +23,19 @@
           right: 0;
           top: 0;
           bottom: 0;
-          height: 100vh;
-          /*height: var(--tg-viewport-stable-height, 100vh);*/
-          /*transition: height .2s ease;*/
+          height: var(--tg-viewport-stable-height, 100vh);
+          transition: height .2s ease;
           /*display: flex;*/
           /*justify-content: center;*/
           /*align-items: center;*/
-          /*overflow: hidden;*/
+          overflow: hidden;
           width: 100%;
       }
 
       .viewport-stable-border {
           position: relative;
-          /*height: 100%;*/
+          height: 100%;
           width: 100%;
-          height: var(--tg-viewport-stable-height, 100vh);
           left: var(--tg-content-safe-area-inset-left, 0);
           right: var(--tg-content-safe-area-inset-right, 0);
           top: var(--tg-content-safe-area-inset-top, 0);
@@ -54,8 +50,6 @@
           flex-direction: column;
           justify-content: center;
           align-items: center;
-
-          /*padding-bottom: env(safe-area-inset-bottom);*/
       }
 
       .content {
@@ -111,7 +105,7 @@
 <div class="viewport-stable-border">
   <div class="content">
     <!-- 20 инпутов -->
-    <input class="crm-system__input" type="text" placeholder="Input 1">
+    <input class="crm-system__input" type="text" placeholder="Input 12">
     <input class="crm-system__input" type="text" placeholder="Input 2">
     <input class="crm-system__input" type="text" placeholder="Input 3">
     <input class="crm-system__input" type="text" placeholder="Input 4">
