--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
           margin: 0;
           font-family: 'Roboto', sans-serif;
           background-color: #f5f5f5;
-          min-height: 100vh;
           display: flex;
           flex-direction: column;
           align-items: center;
           padding: 24px;
           overflow: hidden;
+          min-height: 100vh;
       }
 
       .container {
@@ -28,6 +28,7 @@
           overflow-y: auto;
           -webkit-overflow-scrolling: touch;
           height: 100%;
+          position: relative;
       }
 
       .input-section {
@@ -44,9 +45,7 @@
           font-size: 16px;
           transition: all 0.2s ease;
           box-sizing: border-box;
-          /* Важные атрибуты для клавиатуры */
-          -webkit-user-modify: read-write-plaintext-only;
-          ime-mode: auto;
+          min-height: 56px;
       }
 
       .material-input:focus {
@@ -61,7 +60,7 @@
           }
       }
 
-      /* Стили для кнопки скрытия клавиатуры */
+      /* Клавиатура управления */
       .keyboard-control {
           position: fixed;
           bottom: 0;
@@ -71,7 +70,8 @@
           padding: 8px;
           border-top: 1px solid #e0e0e0;
           display: flex;
-          justify-content: flex-end;
+          justify-content: space-between;
+          align-items: center;
           z-index: 1000;
       }
 
@@ -82,107 +82,131 @@
           border: none;
           border-radius: 8px;
           font-size: 16px;
-          cursor: pointer;
       }
   </style>
 </head>
 <body>
 <div class="container">
+  <!-- 20 инпутов -->
   <div class="input-section">
-    <!-- Примеры разных типов инпутов -->
-    <input class="material-input" placeholder="Text field" type="text">
-    <input class="material-input" placeholder="Email" type="email">
-    <input class="material-input" placeholder="Phone" type="tel">
-    <input class="material-input" placeholder="Number" type="number">
-  </div>
-
-  <!-- Остальные инпуты как раньше -->
-  <div class="input-section">
-    <input class="material-input" placeholder="Field 17">
-    <input class="material-input" placeholder="Field 18">
-    <input class="material-input" placeholder="Field 19">
-    <input class="material-input" placeholder="Field 20">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 2" type="text">
+    <input class="material-input" placeholder="Field 3" type="text">
+    <input class="material-input" placeholder="Field 4" type="text">
   </div>
 
   <div class="input-section">
-    <input class="material-input" placeholder="Field 17">
-    <input class="material-input" placeholder="Field 18">
-    <input class="material-input" placeholder="Field 19">
-    <input class="material-input" placeholder="Field 20">
+    <input class="material-input" placeholder="Field 5" type="text">
+    <input class="material-input" placeholder="Field 6" type="text">
+    <input class="material-input" placeholder="Field 7" type="text">
+    <input class="material-input" placeholder="Field 8" type="text">
   </div>
 
   <div class="input-section">
-    <input class="material-input" placeholder="Field 17">
-    <input class="material-input" placeholder="Field 18">
-    <input class="material-input" placeholder="Field 19">
-    <input class="material-input" placeholder="Field 20">
+    <input class="material-input" placeholder="Field 9" type="text">
+    <input class="material-input" placeholder="Field 10" type="text">
+    <input class="material-input" placeholder="Field 11" type="text">
+    <input class="material-input" placeholder="Field 12" type="text">
   </div>
-  <!-- ... -->
 
   <div class="input-section">
-    <input class="material-input" placeholder="Field 17">
-    <input class="material-input" placeholder="Field 18">
-    <input class="material-input" placeholder="Field 19">
-    <input class="material-input" placeholder="Field 20">
+    <input class="material-input" placeholder="Field 13" type="text">
+    <input class="material-input" placeholder="Field 14" type="text">
+    <input class="material-input" placeholder="Field 15" type="text">
+    <input class="material-input" placeholder="Field 16" type="text">
+  </div>
+
+  <div class="input-section">
+    <input class="material-input" placeholder="Field 17" type="text">
+    <input class="material-input" placeholder="Field 18" type="text">
+    <input class="material-input" placeholder="Field 19" type="text">
+    <input class="material-input" placeholder="Field 20" type="text">
   </div>
 </div>
 
-<!-- Кнопка для скрытия клавиатуры -->
+<!-- Кнопки управления -->
 <div class="keyboard-control" style="display: none;">
-  <button onclick="hideKeyboard()">Скрыть клавиатуру</button>
+  <button onclick="previousInput()">Предыдущий</button>
+  <button onclick="nextInput()">Следующий</button>
+  <button onclick="hideKeyboard()">Скрыть</button>
 </div>
 
 <script>
   telegram.WebApp.ready();
 
-  // Показать/скрыть кнопку управления клавиатурой
-  document.querySelectorAll('.material-input').forEach(input => {
+  let focusedElement = null;
+  let keyboardHeight = 0;
+
+  // Получаем все инпуты
+  const inputs = Array.from(document.querySelectorAll('.material-input'));
+
+  // Фокус на следующий инпут
+  function nextInput() {
+    const currentIndex = inputs.indexOf(document.activeElement);
+    const nextIndex = Math.min(currentIndex + 1, inputs.length - 1);
+    inputs[nextIndex].focus();
+  }
+
+  // Фокус на предыдущий инпут
+  function previousInput() {
+    const currentIndex = inputs.indexOf(document.activeElement);
+    const prevIndex = Math.max(currentIndex - 1, 0);
+    inputs[prevIndex].focus();
+  }
+
+  // Скрываем клавиатуру
+  function hideKeyboard() {
+    telegram.WebApp.hideKeyboard({ placeholder: "Нажмите для ввода" });
+    document.activeElement.blur();
+  }
+
+  // Обработчик фокуса
+  inputs.forEach(input => {
     input.addEventListener('focus', () => {
+      focusedElement = input;
+      keyboardHeight = telegram.WebApp.currentKeyboardHeight || 300; // Минимальная высота
+
+      // Показываем панель управления
       document.querySelector('.keyboard-control').style.display = 'flex';
 
-      // Дополнительный скролл для видимости
+      // Рассчитываем позицию скролла
       const rect = input.getBoundingClientRect();
-      const keyboardHeight = telegram.WebApp.currentKeyboardHeight || 0;
+      const containerRect = document.querySelector('.container').getBoundingClientRect();
+
+      const targetScrollTop =
+        window.scrollY +
+        rect.top -
+        containerRect.top -
+        keyboardHeight -
+        80; // Маржин для видимости
+
+      // Устанавливаем скролл
       window.scrollTo({
-        top: window.scrollY + rect.top - (keyboardHeight + 50),
+        top: Math.max(0, targetScrollTop),
         behavior: 'smooth'
       });
 
-      telegram.WebApp.expand({ height: document.body.scrollHeight });
+      // Обновляем высоту окна
+      telegram.WebApp.expand({
+        height: document.body.scrollHeight + keyboardHeight
+      });
     });
 
     input.addEventListener('blur', () => {
-      // Скрываем кнопку через 300мс после потери фокуса
       setTimeout(() => {
         document.querySelector('.keyboard-control').style.display = 'none';
       }, 300);
     });
   });
 
-  // Функция скрытия клавиатуры
-  function hideKeyboard() {
-    telegram.WebApp.hideKeyboard({
-      text: "Ввод завершён",
-      placeholder: "Нажмите для ввода"
-    });
-    document.activeElement.blur();
-  }
-
-  // Обработка кликов вне инпутов
-  document.addEventListener('click', (e) => {
-    if (!e.target.closest('.material-input')) {
-      document.activeElement.blur();
-    }
-  });
-
-  // Обновление высоты окна
+  // Обновляем высоту при изменении размеров
   window.addEventListener('resize', () => {
     telegram.WebApp.expand();
   });
 
-  // Настройки главной кнопки
-  telegram.WebApp.MainButton.color = '#2196F3';
+  // Автоматическое обновление высоты при загрузке
   telegram.WebApp.expand();
+  telegram.WebApp.MainButton.color = '#2196F3';
 </script>
 </body>
 </html>
