--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Telegram Form</title>
   <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
   <style>
+      :root {
+          --safe-area-bottom: env(safe-area-inset-bottom);
+          --keyboard-height: calc(var(--tg-viewport-height) - var(--tg-viewport-stable-height));
+      }
+
       body {
           margin: 0;
           font-family: 'Roboto', sans-serif;
@@ -14,8 +19,8 @@
           flex-direction: column;
           align-items: center;
           padding: 24px;
-          overflow: hidden;
           min-height: 100vh;
+          overflow: hidden;
       }
 
       .container {
@@ -27,8 +32,7 @@
           box-shadow: 0 4px 8px rgba(0,0,0,0.1);
           overflow-y: auto;
           -webkit-overflow-scrolling: touch;
-          height: 100%;
-          position: relative;
+          height: calc(var(--tg-viewport-stable-height) - 100px); /* Оставляем место под панель управления */
       }
 
       .input-section {
@@ -54,27 +58,23 @@
           box-shadow: 0 0 0 2px rgba(33,150,243,0.2);
       }
 
-      @media (max-width: 600px) {
-          .material-input {
-              font-size: 18px;
-          }
-      }
-
-      /* Клавиатура управления */
+      /* Панель управления */
       .keyboard-control {
           position: fixed;
-          bottom: 0;
+          bottom: var(--safe-area-bottom);
           left: 0;
           right: 0;
-          background: white;
           padding: 8px;
+          background: white;
           border-top: 1px solid #e0e0e0;
           display: flex;
           justify-content: space-between;
           align-items: center;
           z-index: 1000;
+          box-shadow: 0 -2px 4px rgba(0,0,0,0.1);
       }
 
+      /* Стили кнопок */
       .keyboard-control button {
           padding: 8px 16px;
           background: #2196F3;
@@ -83,6 +83,13 @@
           border-radius: 8px;
           font-size: 16px;
       }
+
+      /* Адаптивные настройки */
+      @media (max-width: 600px) {
+          .material-input {
+              font-size: 18px;
+          }
+      }
   </style>
 </head>
 <body>
@@ -90,105 +97,70 @@
   <!-- 20 инпутов -->
   <div class="input-section">
     <input class="material-input" placeholder="Field 1" type="text">
-    <input class="material-input" placeholder="Field 2" type="text">
-    <input class="material-input" placeholder="Field 3" type="text">
-    <input class="material-input" placeholder="Field 4" type="text">
-  </div>
-
-  <div class="input-section">
-    <input class="material-input" placeholder="Field 5" type="text">
-    <input class="material-input" placeholder="Field 6" type="text">
-    <input class="material-input" placeholder="Field 7" type="text">
-    <input class="material-input" placeholder="Field 8" type="text">
-  </div>
-
-  <div class="input-section">
-    <input class="material-input" placeholder="Field 9" type="text">
-    <input class="material-input" placeholder="Field 10" type="text">
-    <input class="material-input" placeholder="Field 11" type="text">
-    <input class="material-input" placeholder="Field 12" type="text">
-  </div>
-
-  <div class="input-section">
-    <input class="material-input" placeholder="Field 13" type="text">
-    <input class="material-input" placeholder="Field 14" type="text">
-    <input class="material-input" placeholder="Field 15" type="text">
-    <input class="material-input" placeholder="Field 16" type="text">
-  </div>
-
-  <div class="input-section">
-    <input class="material-input" placeholder="Field 17" type="text">
-    <input class="material-input" placeholder="Field 18" type="text">
-    <input class="material-input" placeholder="Field 19" type="text">
-    <input class="material-input" placeholder="Field 20" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <input class="material-input" placeholder="Field 1" type="text">
+    <!-- ... остальные инпуты -->
   </div>
 </div>
 
-<!-- Кнопки управления -->
 <div class="keyboard-control" style="display: none;">
-  <button onclick="previousInput()">Предыдущий</button>
-  <button onclick="nextInput()">Следующий</button>
+  <button onclick="previousInput()">←</button>
+  <button onclick="nextInput()">→</button>
   <button onclick="hideKeyboard()">Скрыть</button>
 </div>
 
 <script>
   telegram.WebApp.ready();
 
-  let focusedElement = null;
-  let keyboardHeight = 0;
-
   // Получаем все инпуты
   const inputs = Array.from(document.querySelectorAll('.material-input'));
 
-  // Фокус на следующий инпут
-  function nextInput() {
-    const currentIndex = inputs.indexOf(document.activeElement);
-    const nextIndex = Math.min(currentIndex + 1, inputs.length - 1);
-    inputs[nextIndex].focus();
-  }
+  // Функции навигации
+  function previousInput() { inputs[inputs.indexOf(document.activeElement)-1]?.focus() }
+  function nextInput() { inputs[inputs.indexOf(document.activeElement)+1]?.focus() }
 
-  // Фокус на предыдущий инпут
-  function previousInput() {
-    const currentIndex = inputs.indexOf(document.activeElement);
-    const prevIndex = Math.max(currentIndex - 1, 0);
-    inputs[prevIndex].focus();
-  }
-
-  // Скрываем клавиатуру
+  // Скрытие клавиатуры
   function hideKeyboard() {
     telegram.WebApp.hideKeyboard({ placeholder: "Нажмите для ввода" });
     document.activeElement.blur();
   }
 
-  // Обработчик фокуса
+  // Обработчики фокуса
   inputs.forEach(input => {
     input.addEventListener('focus', () => {
-      focusedElement = input;
-      keyboardHeight = telegram.WebApp.currentKeyboardHeight || 300; // Минимальная высота
-
-      // Показываем панель управления
       document.querySelector('.keyboard-control').style.display = 'flex';
 
-      // Рассчитываем позицию скролла
+      // Адаптивный скролл
       const rect = input.getBoundingClientRect();
-      const containerRect = document.querySelector('.container').getBoundingClientRect();
-
-      const targetScrollTop =
-        window.scrollY +
-        rect.top -
-        containerRect.top -
-        keyboardHeight -
-        80; // Маржин для видимости
-
-      // Устанавливаем скролл
       window.scrollTo({
-        top: Math.max(0, targetScrollTop),
+        top: window.scrollY + (rect.top - (window.innerHeight - rect.bottom)),
         behavior: 'smooth'
       });
 
-      // Обновляем высоту окна
+      // Обновление высоты контейнера
       telegram.WebApp.expand({
-        height: document.body.scrollHeight + keyboardHeight
+        height: document.body.scrollHeight + 50 // Дополнительный маржин
       });
     });
 
@@ -199,14 +171,14 @@
     });
   });
 
-  // Обновляем высоту при изменении размеров
+  // Обновление размеров при изменениях
   window.addEventListener('resize', () => {
     telegram.WebApp.expand();
   });
 
-  // Автоматическое обновление высоты при загрузке
-  telegram.WebApp.expand();
+  // Инициализация
   telegram.WebApp.MainButton.color = '#2196F3';
+  telegram.WebApp.expand();
 </script>
 </body>
 </html>
